<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.products.ProductsActivity">

    <include layout="@layout/layout_actionbar_base" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_normal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/AppText.SubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/products_picking_label"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_product_detail_img_size"
                android:layout_marginTop="@dimen/margin_padding_large"
                android:transitionName="@string/product_image_transition"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductNew"
                style="@style/AppText.ProductNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_new"
                android:transitionName="@string/product_new_transition"
                app:layout_constraintEnd_toEndOf="@+id/ivProductImage"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivProductImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductName"
                style="@style/AppText.ProductDetailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_large"
                android:transitionName="@string/product_name_transition"
                app:layout_constraintTop_toBottomOf="@+id/ivProductImage"
                tools:text="Product Name" />

            <TextView
                android:id="@+id/tvProductPrice"
                style="@style/AppText.ProductDetailPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:transitionName="@string/product_price_transition"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                tools:text="20.99" />

            <TextView
                android:id="@+id/tvProductContent"
                style="@style/AppText.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProductPrice"
                app:layout_constraintVertical_bias="0"
                tools:text="Product Content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>